--- a/src/components/Dashboard/AddEvent/addevent.scss
+++ b/src/components/Dashboard/AddEvent/addevent.scss
@@ -27,7 +27,8 @@
         font-size: 20px;
         margin: 16px auto 0 auto;
         background: $dark;
-        border: 1px solid #fff;;
+        border: 1px solid #fff;
+        border-radius: 2px;
     }
     .add-form-box input, .add-form-box textarea {
         margin-left: 5%;
